--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,11 @@ jobs:
       run: npm ci
     - name: Build lambda
       run: npm run build
+    - name: Zip lambda function
+      run: npm run postbuild
+    - name: Deploy Production
+      run: npm run deploy:production
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       
