--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
       run: npm run build
     - name: Zip lambda function
       run: npm run postbuild
+    -name: Install aws-cli
+      run: snap install aws-cli --classic
     - name: Deploy Production
       run: npm run deploy:production
       env:
