--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 jobs:
-  Depencency install:
+  Depencency_install:
     runs-on: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v3
