--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     - name: install depsendencies
       run: npm ci
   Build:
+    needs: Depencency_install
     runs-on: [ubuntu-latest]
     steps:
     - name: Build lambda
@@ -21,6 +22,7 @@ jobs:
     - name: Install aws-cli
       run: sudo snap install aws-cli --classic
   Deploy:
+    needs: Build
     runs-on: [ubuntu-latest]
     steps:
     - name: Deploy Production
