--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
     needs: Depencency_install
     runs-on: [ubuntu-latest]
     steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
     - name: Build lambda
       run: npm run build
     - name: Zip lambda function
@@ -25,6 +27,8 @@ jobs:
     needs: Build
     runs-on: [ubuntu-latest]
     steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
     - name: Deploy Production
       id: deployproduction
       run: npm run deploy:production
@@ -34,6 +38,7 @@ jobs:
         AWS_DEFAULT_REGION: us-east-1
         AWS_REGION: us-east-1
   Update:
+    needs: Build
     runs-on: [ubuntu-latest]
     steps:
     - name: Update code of deployed function
